feat: add more voyage models (#2419)

--- a/models/voyage/models/text_embedding/_position.yaml
+++ b/models/voyage/models/text_embedding/_position.yaml
@@ -1,9 +1,12 @@
+- voyage-multimodal-3.5
+- voyage-multimodal-3
 - voyage-3.5
 - voyage-3.5-lite
+- voyage-3-large
 - voyage-3
 - voyage-3-lite
-- voyage-3-large
+- voyage-code-3
+- voyage-code-2
 - voyage-finance-2
 - voyage-multilingual-2
 - voyage-law-2
-- voyage-code-2
