--- a/models/voyage/models/text_embedding/voyage-3.5-lite.yaml
+++ b/models/voyage/models/text_embedding/voyage-3.5-lite.yaml
@@ -1,8 +1,8 @@
-model: voyage-3-lite
+model: voyage-3.5-lite
 model_type: text-embedding
 model_properties:
   context_size: 32000
 pricing:
-  input: '0.00002'
-  unit: '0.001'
+  input: '0.02'
+  unit: '1000000'
   currency: USD
