--- a/models/voyage/models/text_embedding/voyage-code-3.yaml
+++ b/models/voyage/models/text_embedding/voyage-code-3.yaml
@@ -1,8 +1,8 @@
-model: voyage-3.5
+model: voyage-code-3
 model_type: text-embedding
 model_properties:
   context_size: 32000
 pricing:
-  input: '0.06'
+  input: '0.18'
   unit: '1000000'
   currency: USD
