--- a/tools/paddleocr/tools/document_parsing.yaml
+++ b/tools/paddleocr/tools/document_parsing.yaml
@@ -22,15 +22,29 @@ parameters:
     llm_description: The URL of an image or PDF file, or the Base64-encoded result of the content of such a file.
     form: llm
   - name: fileType
-    type: number
+    type: select
     required: false
+    default: auto
+    options:
+      - label:
+          en_US: Auto Detect
+          zh_Hans: 自动检测
+        value: auto
+      - label:
+          en_US: PDF
+          zh_Hans: PDF
+        value: pdf
+      - label:
+          en_US: Image
+          zh_Hans: 图片
+        value: image
     label:
       en_US: File Type
       zh_Hans: 文件类型
     human_description:
-      en_US: File type. 0 indicates a PDF file, and 1 indicates an image file. If not specified, the file type will be inferred from the URL.
-      zh_Hans: 文件类型。0 表示 PDF 文件，1 表示图像文件。若不设置，则将根据 URL 推断文件类型。
-    llm_description: File type. 0 indicates a PDF file, and 1 indicates an image file. If not specified, the file type will be inferred from the URL.
+      en_US: File type. "Auto Detect" will infer the type from URL, "PDF" for PDF files, "Image" for image files.
+      zh_Hans: 文件类型。"自动检测" 将根据 URL 推断类型，"PDF" 表示 PDF 文件，"图片" 表示图像文件。
+    llm_description: File type. "auto" will infer the type from URL, "pdf" for PDF files, "image" for image files.
     form: llm
   - name: useDocOrientationClassify
     type: boolean
@@ -112,9 +126,9 @@ parameters:
       en_US: Whether to Enable Chart Recognition
       zh_Hans: 是否启用图表识别
     human_description:
-      en_US: Whether to enable the chart recognition function.
-      zh_Hans: 是否启用图表识别功能。
-    llm_description: Whether to enable the chart recognition function.
+      en_US: Whether to enable the chart recognition function (to recognize line charts, bar charts, etc.).
+      zh_Hans: 是否启用图表识别功能（识别折线图、柱状图等）。
+    llm_description: Whether to enable the chart recognition function (to recognize line charts, bar charts, etc.).
     form: llm
   - name: useRegionDetection
     type: boolean
@@ -382,6 +396,14 @@ parameters:
       zh_Hans: 是否返回可视化结果。
     llm_description: Whether or not to return visualization results.
     form: llm
+output_schema:
+    type: object
+    properties:
+      images:
+        type: array
+        items:
+          type: object
+        description: The images extracted from the file.
 extra:
   python:
     source: tools/document_parsing.py
