--- a/models/gemini/models/llm/gemini-2.5-flash-image.yaml
+++ b/models/gemini/models/llm/gemini-2.5-flash-image.yaml
@@ -56,7 +56,8 @@ parameter_rules:
     help:
       en_US: Maximum number of tokens in response
       zh_Hans: 最大生成 tokens 数
-# https://ai.google.dev/gemini-api/docs/pricing#gemini-2.5-flash-image
+# https://ai.google.dev/gemini-api/docs/pricing#gemini-2.5-flash-image- name: use_inline_file
+    use_template: use_inline_file
 pricing:
   input: '0.30'
   output: '30.0'
