--- a/models/gemini/models/llm/gemini-3-flash-preview.yaml
+++ b/models/gemini/models/llm/gemini-3-flash-preview.yaml
@@ -144,12 +144,8 @@ parameter_rules:
       en_US: Use inline file mode
       zh_Hans: 使用内嵌文件模式
     help:
-      en_US: |
-        When enabled, files will be embedded directly in the request (inline mode) for better performance.
-        When disabled, files will be uploaded using the Files API. Default is disabled (Files API).
-      zh_Hans: |
-        启用后，文件将直接内嵌在请求中（内联模式）以提高性能。
-        禁用后，文件将使用 Files API 上传。默认为禁用（使用 Files API）。
+      en_US: When enabled, files will be embedded directly in the request (inline mode) for better performance. When disabled, files will be uploaded using the Files API. Default is disabled (Files API).
+      zh_Hans: 启用后，文件将直接内嵌在请求中（内联模式）以提高性能。禁用后，文件将使用 Files API 上传。默认为禁用（使用 Files API）。
   - name: json_schema
     use_template: json_schema
 # https://ai.google.dev/gemini-api/docs/pricing#gemini-3-flash-preview
