--- a/models/gemini/models/llm/gemini-2.5-pro-preview-03-25.yaml
+++ b/models/gemini/models/llm/gemini-2.5-pro-preview-03-25.yaml
@@ -71,6 +71,20 @@ parameter_rules:
       en_US: Grounding with Google Search
       zh_Hans: Google 事实核查
       ja_JP: Google検索に基づいた応答をします。
+  - name: use_inline_file
+    type: boolean
+    required: true
+    default: false
+    label:
+      en_US: Use inline file mode
+      zh_Hans: 使用内嵌文件模式
+    help:
+      en_US: |
+        When enabled, files will be embedded directly in the request (inline mode) for better performance.
+        When disabled, files will be uploaded using the Files API. Default is disabled (Files API).
+      zh_Hans: |
+        启用后，文件将直接内嵌在请求中（内联模式）以提高性能。
+        禁用后，文件将使用 Files API 上传。默认为禁用（使用 Files API）。
   - name: json_schema
     use_template: json_schema
 pricing:
