chore: rename project to avoid name clash with existing package

--- a/datasources/google_cloud_storage/pyproject.toml
+++ b/datasources/google_cloud_storage/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "google_cloud_storage"
+name = "google_cloud_storage_plugin"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
