add nova lite 2

--- a/models/bedrock/models/llm/amazon-nova.yaml
+++ b/models/bedrock/models/llm/amazon-nova.yaml
@@ -21,12 +21,13 @@ parameter_rules:
       zh_Hans: 指定模型名称
       en_US: specify model name
     required: true
-    default: Nova Pro
+    default: Nova Lite V2
     options:
-      - Nova Premier
-      - Nova Pro
-      - Nova Lite
-      - Nova Micro
+      - Nova Premier V1
+      - Nova Pro V1 
+      - Nova Lite V1
+      - Nova Lite V2
+      - Nova Micro V1 
   - name: cross-region
     label:
       zh_Hans: 跨区域推理
