--- a/.github/workflows/upload-merged-plugin.yaml
+++ b/.github/workflows/upload-merged-plugin.yaml
@@ -25,14 +25,19 @@ jobs:
 
       - id: filter
         name: Detect changed plugins
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
-          if [ "${{ github.event.before }}" == "0000000000000000000000000000000000000000" ]; then
-            BASE_SHA="HEAD~1"
+          if [ "${{ github.event_name }}" == "pull_request" ]; then
+            CHANGED_FILES=$(gh pr view -R ${{ github.repository }} ${{ github.event.pull_request.number }} --json files --jq '.files[].path')
           else
-            BASE_SHA="${{ github.event.before }}"
+            if [ "${{ github.event.before }}" == "0000000000000000000000000000000000000000" ]; then
+              BASE_SHA="HEAD~1"
+            else
+              BASE_SHA="${{ github.event.before }}"
+            fi
+            CHANGED_FILES=$(git diff --name-only $BASE_SHA HEAD)
           fi
-
-          CHANGED_FILES=$(git diff --name-only $BASE_SHA HEAD)
 
           MANIFESTS=$(find . -name "manifest.yaml" -not -path "*/.*")
 
