--- a/.github/workflows/pre-pr-check-per-plugin.yaml
+++ b/.github/workflows/pre-pr-check-per-plugin.yaml
@@ -195,3 +195,31 @@ jobs:
         working-directory: ${{ env.EXTRACT_DIR }}
         run: |
           PLUGIN_FILE_PATH="$(realpath ../${{ env.PKG_NAME }})" uv run --with pytest pytest
+
+  check-complete:
+    name: Check Complete
+    needs:
+      - detect-changes
+      - test
+    if: always()
+    runs-on: ubuntu-latest
+    steps:
+      - name: Verify check results
+        run: |
+          if [ "${{ needs.detect-changes.result }}" != "success" ]; then
+            echo "detect-changes failed."
+            exit 1
+          fi
+
+          if [ "${{ needs.detect-changes.outputs.has_changes }}" != "true" ]; then
+            echo "No plugin changes detected."
+            exit 0
+          fi
+
+          if [ "${{ needs.test.result }}" = "success" ]; then
+            echo "Plugin checks passed."
+            exit 0
+          fi
+
+          echo "Plugin checks failed."
+          exit 1
