bugfix: updated parameters for Tavily Extract tool

--- a/tools/tavily/tools/tavily_extract.yaml
+++ b/tools/tavily/tools/tavily_extract.yaml
@@ -24,6 +24,17 @@ parameters:
     llm_description: One or more URLs to extract content from (comma-separated if multiple).
     required: true
     type: string
+  - name: query
+    form: llm
+    human_description:
+      en_US: A query string to rerank extracted content chunks based on relevance to your intent.
+      zh_Hans: 用于根据您的意图对提取的内容块进行相关性重新排序的查询字符串。
+    label:
+      en_US: Query
+      zh_Hans: 查询
+    llm_description: Optional query string to rerank extracted content chunks based on relevance to user intent.
+    required: false
+    type: string
   - name: include_images
     form: form
     human_description:
@@ -90,3 +101,42 @@ parameters:
           zh_Hans: 文本
         value: text
     default: markdown
+  - name: chunks_per_source
+    form: form
+    human_description:
+      en_US: Maximum number of content chunks (up to 500 characters each) returned per source.
+      zh_Hans: 每个来源返回的内容块的最大数量（每块最多500个字符）。
+    label:
+      en_US: Chunks Per Source
+      zh_Hans: 每来源块数
+    llm_description: Maximum number of relevant content chunks (1-5) returned per source. Default is 3.
+    required: false
+    type: number
+    min: 1
+    max: 5
+    default: 3
+  - name: timeout
+    form: form
+    human_description:
+      en_US: Request timeout in seconds. Default is 10s for basic extraction and 30s for advanced.
+      zh_Hans: 请求超时时间（秒）。基本提取默认为10秒，高级提取默认为30秒。
+    label:
+      en_US: Timeout
+      zh_Hans: 超时时间
+    llm_description: Request timeout in seconds (1.0-60.0). Default is 10s for basic, 30s for advanced extraction.
+    required: false
+    type: number
+    min: 1
+    max: 60
+  - name: include_usage
+    form: form
+    human_description:
+      en_US: Include API usage information (credit usage) in the response.
+      zh_Hans: 在响应中包含API使用信息（积分使用情况）。
+    label:
+      en_US: Include Usage
+      zh_Hans: 包含使用信息
+    llm_description: When set to true, includes API credit usage information in the response.
+    required: false
+    type: boolean
+    default: false
