chore: allow fork PR to read secret from target branch

--- a/.github/workflows/pre-pr-check-per-plugin.yaml
+++ b/.github/workflows/pre-pr-check-per-plugin.yaml
@@ -1,7 +1,7 @@
 name: Pre PR Check Per Plugin
 
 on:
-  pull_request:
+  pull_request_target:
     types: [opened, synchronize, ready_for_review, review_requested, edited]
     branches:
       - main
