--- a/tools/paddleocr/tools/document_parsing.yaml
+++ b/tools/paddleocr/tools/document_parsing.yaml
@@ -142,6 +142,18 @@ parameters:
       zh_Hans: 是否启用区域检测功能。
     llm_description: Whether to enable the region detection function.
     form: llm
+  - name: formatBlockContent
+    type: boolean
+    required: false
+    default: false
+    label:
+      en_US: Whether to Format Block Content
+      zh_Hans: 是否格式化块内容
+    human_description:
+      en_US: Whether to convert the block content into Markdown format.
+      zh_Hans: 是否将块内容转换为 Markdown 格式。
+    llm_description: Whether to convert the block content into Markdown format.
+    form: llm
   - name: layoutNms
     type: boolean
     required: false
@@ -383,6 +395,41 @@ parameters:
       en_US: Whether to enable end-to-end wireless table recognition mode. When enabled, the cell detection model will not be used, and only the table structure recognition model will be used.
       zh_Hans: 是否启用无线表端到端表格识别模式。启用时，不使用单元格检测模型，只使用表格结构识别模型。
     llm_description: Whether to enable end-to-end wireless table recognition mode. When enabled, the cell detection model will not be used, and only the table structure recognition model will be used.
+    form: llm
+  - name: markdownIgnoreLabels
+    type: string
+    required: false
+    label:
+      en_US: Labels to Ignore in Markdown Output
+      zh_Hans: Markdown 输出中忽略的标签
+    human_description:
+      en_US: 'Comma-separated list of labels to ignore when generating Markdown output. For example: "header,footer,page_number".'
+      zh_Hans: '生成 Markdown 输出时要忽略的标签列表，使用逗号分隔。例如："header,footer,page_number"。'
+    llm_description: 'Comma-separated list of labels to ignore when generating Markdown output. For example: "header,footer,page_number".'
+    form: llm
+  - name: prettifyMarkdown
+    type: boolean
+    required: false
+    default: true
+    label:
+      en_US: Whether to Prettify the Output Markdown Text
+      zh_Hans: 是否美化输出的 Markdown 文本
+    human_description:
+      en_US: Whether to prettify the output Markdown text.
+      zh_Hans: 是否美化输出的 Markdown 文本。
+    llm_description: Whether to prettify the output Markdown text.
+    form: llm
+  - name: showFormulaNumber
+    type: boolean
+    required: false
+    default: false
+    label:
+      en_US: Whether to Include Formula Numbers in the Output Markdown Text
+      zh_Hans: 是否在输出的 Markdown 文本中包含公式编号
+    human_description:
+      en_US: Whether to include formula numbers in the output markdown text.
+      zh_Hans: 是否在输出的 Markdown 文本中包含公式编号。
+    llm_description: Whether to include formula numbers in the output markdown text.
     form: llm
   - name: visualize
     type: boolean
