fix: restore dingo_scout and bump version to 0.6.2

--- a/tools/dingo/provider/dingo.yaml
+++ b/tools/dingo/provider/dingo.yaml
@@ -17,6 +17,7 @@ extra:
     source: provider/dingo.py
 
 tools:
+  - tools/dingo_scout.yaml
   - tools/resume_optimizer.yaml
   - tools/keyword_matcher.yaml
 
