feat: Added Tavily Map tool to plugin

--- a/tools/tavily/provider/tavily.yaml
+++ b/tools/tavily/provider/tavily.yaml
@@ -16,7 +16,7 @@ extra:
   python:
     source: provider/tavily.py
 identity:
-  author: Yash Parmar, Kalo Chin
+  author: Yash Bhandare,Yash Parmar, Kalo Chin
   description:
     en_US: A powerful AI-native search engine and web content extraction tool that
       provides highly relevant search results and raw content extraction from web
@@ -33,3 +33,4 @@ tools:
 - tools/tavily_extract.yaml
 - tools/tavily_search.yaml
 - tools/tavily_crawl.yaml
+- tools/tavily_map.yaml
